# social-agent

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: monitor_trending.py  multi_platform.py  scheduled_posting.py
src/: __init__.py
src/social_agent/: __init__.py  agent.py  cli.py  config.py  content.py  llm.py  plugin.py  scheduler.py
src/social_agent/plugins/: __init__.py
src/social_agent/plugins/weibo/: __init__.py
src/social_agent/plugins/xiaohongshu/: __init__.py
tests/: __init__.py  test_core.py
